Fix Dockerfile for jenkins

--- a/.github/actions/kaniko/Dockerfile
+++ b/.github/actions/kaniko/Dockerfile
@@ -1,8 +1,6 @@
 FROM alpine:3.16.1 as certs
 
-FROM  aevea/action-kaniko
-
-SHELL ["/busybox/sh", "-c"]
+FROM gcr.io/kaniko-project/executor:v1.7.0-debug
 
 COPY entrypoint.sh /
 COPY --from=certs /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
