--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -68,16 +68,24 @@ jobs:
         with:
           image:  ${{ env.image }}:${{ env.tag }}
           args: --file=Dockerfile
-      # - 
-      #   name: Kaniko build to Artifactory
-      #   uses: ./.github/actions/kaniko
-      #   with:
-      #     image: ${{ env.image }}
-      #     tag:   ${{ env.tag }}
-      #     username: 'bjrooney'
-      #     password: ${{ secrets.DOCKERIO_PASSWORD }}
-      #     cache: true
-      #     cache_registry: aevea/cache
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERIO_PASSWORD}}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.image }}:${{ env.tag }}
 
       - 
         name: List files in the repository
@@ -98,26 +106,19 @@ jobs:
         ARTIFACTORY_USERNAME: ${{ secrets.HELM_USERNAME }}
         ARTIFACTORY_PASSWORD: ${{ secrets.HELM_SECRET }}
         ACTION: check_push
-  docker:
+  # kaniko:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     -
+  #       name: Kaniko build to Artifactory
+  #       uses: aevea/action-kaniko@master
+  #       with:
+  #         image: ${{ env.image }}
+  #         tag:   ${{ env.tag }}
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_SECRET }}
+  #         registry: ${{ secrets.ARTIFACTORY_DOCKER_REPO }}
+  #         cache: true
+  #         cache_registry: aevea/cache
 
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERIO_PASSWORD}}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.image }}:${{ env.tag }}
   
