--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -84,6 +84,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: "{{defaultContext}}"
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.image }}:${{ env.tag }}
 
