--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -68,26 +68,36 @@ jobs:
         with:
           image:  ${{ env.image }}:${{ env.tag }}
           args: --file=Dockerfile
+      # -
+      #   name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v2
+      # -
+      #   name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v2
+      # -
+      #   name: Login to DockerHub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERIO_PASSWORD}}
+      # -
+      #   name: Build and push
+      #   uses: docker/build-push-action@v3
+      #   with:
+      #     context: "{{defaultContext}}"
+      #     push: true
+      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.image }}:${{ env.tag }}
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v2
+        name: Kaniko build to Artifactory
+        uses: .github/actions/kaniko
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERIO_PASSWORD}}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: "{{defaultContext}}"
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.image }}:${{ env.tag }}
-
+          image: ${{ env.image }}
+          tag:   ${{ env.tag }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_SECRET }}
+          registry: ${{ secrets.ARTIFACTORY_DOCKER_REPO }}
+          cache: true
+          cache_registry: aevea/cache
       - 
         name: List files in the repository
         run: |
