--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -96,6 +96,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_SECRET }}
           registry: ${{ secrets.ARTIFACTORY_DOCKER_REPO }}
+          skip_unchanged_digest: true
           cache: true
           cache_registry: aevea/cache
       - 
