--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -2,7 +2,7 @@ name: GitHub Actions Demo
 on: [push]
 
 env:
-  image: simple-java-maven
+  image: bjrooney/simple-java-maven
   tag: openjdk-19-jdk-alpine3.15
   java-version: '11'
   maven-version: '3.8.6'
